--- a/index.html
+++ b/index.html
@@ -108,8 +108,6 @@ document.addEventListener("DOMContentLoaded", function() {
 	canvas.width = 700;
 	canvas.height = 550;
 	var context = canvas.getContext("2d");
-	var width = canvas.width;
-	var height = canvas.height;
 
 	canvas.onmousedown = function(e) {
 		mouse.click = true;
@@ -120,8 +118,8 @@ document.addEventListener("DOMContentLoaded", function() {
 	};
 	
 	canvas.onmousemove = function(e) {
-		mouse.pos.x = e.clientX / width;
-		mouse.pos.y = e.clientY / height;
+		mouse.pos.x = e.pageX;
+		mouse.pos.y = e.pageY;
 		mouse.move = true;
 	};
 	socket.on("get_image", function() {
@@ -147,8 +145,8 @@ document.addEventListener("DOMContentLoaded", function() {
 		context.lineJoin = "round";
 		context.lineWidth = line[3];
 		context.strokeStyle = line[2];
-		context.moveTo(line[0].x * width, line[0].y * height);
-		context.lineTo(line[1].x * width, line[1].y * height);
+		context.moveTo(line[0].x, line[0].y);
+		context.lineTo(line[1].x, line[1].y);
 		context.stroke();
 	});
 	
