--- a/index.html
+++ b/index.html
@@ -29,34 +29,74 @@
 <div id="slider-3" style="height: 150px;"></div>
 <div id="slider-4" style="height: 150px;"></div>
 <canvas id="myCanvas2" width="150" height="150"style="border:1px solid #000000;">
-</canvas></div>
-<form id="styles">
+</canvas></div><form id="styles">
 <INPUT TYPE=RADIO NAME="style" VALUE="square">square</INPUT><BR> 
 <INPUT TYPE=RADIO NAME="style" VALUE="round" checked="checked">round</INPUT><BR> 
 <INPUT TYPE=RADIO NAME="style" VALUE="butt">butt</INPUT><br>
 <INPUT TYPE=RADIO NAME="style" VALUE="spray">spray</INPUT>
 </form>
 		<script src="/socket.io/socket.io.js"></script>
-		  
-<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-<script src="http://code.jquery.com/ui/1.8.17/jquery-ui.min.js"></script>
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
-<script src="assets/scripts/jquery.ui.touch-punch.min.js"></script>
+		  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+  <script src="assets/scripts/jquery.ui.touch-punch.min.js"></script>
 		<script> var socket = io('/draw'); </script>
 <script>
-var style = $("input[name=style]:checked", "#styles").val();
-$('#styles input').on('change', function() {style = $('input[name=style]:checked', '#styles').val();
-});
 var dwidth = 2
 var name = 'User' + Math.round(Math.random() * 255);
 var r = Math.round(Math.random() * 255);
 var g = Math.round(Math.random() * 255);
 var b = Math.round(Math.random() * 255);
 var cl = 'rgb('+r+','+g+','+b+')';
+if(name == '') name = 'Anonymous';
+var pl = 
+{
+  id: 0,
+  name: name,
+  color: cl,
+  x: 0,
+  y: 0
+};
+document.body.addEventListener("touchmove", function (e) {
+  var touch = e.touches[0];
+  var mouseEvent = new MouseEvent("mousemove", {
+    clientX: touch.clientX,
+    clientY: touch.clientY
+  });
+  document.body.dispatchEvent(mouseEvent);
+}, false);
+var socket2 = io('/mousetrack');
+ 
+socket2.on('connect', function () {
+  socket2.emit('client_connected', pl);
+});
+$('body').mousemove(function(event){
+  var pos = {
+    x: event.pageX + 2,
+    y: event.pageY + 2,
+    color: cl
+  };
+  socket2.emit('update_coords', pos);
+});
+
+
+
+socket2.on('send_data', function(data){
+  var i=0;
+  $('#zone').html('');
+  while(i < data.length)
+  {
+    var me = '';
+    if( data[i].id == pl.id ) me = 'You';
+    player = '<div class="player" id="p_' + data[i].id + '" style="background: ' + data[i].color + '  ;left:' + data[i].x + 'px;top:' + data[i].y +'px"> ' + me + '</div>';
+    $('#zone').append(player);
+    i++;
+  }
+});
 </script>		
 		<script>
 			socket.on("chat_message", function(message) {
-				appendMessage(message); updateScroll();
+				appendMessage(message);
 			});
 			setTimeout(function() {
     var headID = document.getElementsByTagName("head")[0];         
@@ -65,12 +105,264 @@ var cl = 'rgb('+r+','+g+','+b+')';
     newScript.src = 'assets/scripts/chat.js';
     headID.appendChild(newScript);
 }, 2000);
-
+      var style = String($("input[name=style]:checked", "#styles").val());
+$('#styles input').on('change', function() {style = String($('input[name=style]:checked', '#styles').val());
+});
 		</script>
 		
-<script src='assets/scripts/drawboard.js'></script>
-<script src="assets/scripts/mousetrack.js"></script>
-<script src='assets/scripts/sliders.js'></script>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  var mouse = {
+    click: false,
+    move: false,
+    pos: {x:undefined, y:undefined},
+    pos_prev: false
+  }
+
+
+
+  
+  var canvas = document.getElementById("drawboard");
+  var chatBox = document.getElementById("chat");
+  canvas.width = 700;
+  canvas.height = 550;
+  var context = canvas.getContext("2d");
+
+
+// Set up touch events for mobile, etc
+canvas.addEventListener("touchstart", function (e) {
+  if (e.touches.length > 1){return true;}
+  else {
+        mousePos = getTouchPos(canvas, e);
+  
+  var touch = e.touches[0];
+  var mouseEvent = new MouseEvent("mousedown", {
+    clientX: touch.clientX,
+    clientY: touch.clientY
+  });
+  canvas.dispatchEvent(mouseEvent);
+}}, false);
+canvas.addEventListener("touchend", function (e) {
+  if (e.touches.length > 1){return true;}
+  else {
+  var mouseEvent = new MouseEvent("mouseup", {});
+  canvas.dispatchEvent(mouseEvent);
+}}, false);
+canvas.addEventListener("touchmove", function (e) {
+  if (e.touches.length > 1){return true;}
+  else {
+  var touch = e.touches[0];
+  var mouseEvent = new MouseEvent("mousemove", {
+    clientX: touch.clientX,
+    clientY: touch.clientY
+  });
+  canvas.dispatchEvent(mouseEvent);
+}}, false);
+
+// Get the position of a touch relative to the canvas
+function getTouchPos(canvasDom, touchEvent) {
+  var rect = canvasDom.getBoundingClientRect();
+  return {
+    x: touchEvent.touches[0].clientX - rect.left,
+    y: touchEvent.touches[0].clientY - rect.top
+  };
+}
+var stuff = document.getElementById("stuff")
+var slider1 = document.getElementById("slider-1")
+document.body.addEventListener("touchstart", function (e) {
+  if (e.touches.length > 1){return true;}
+  else if (e.target == canvas) {
+    e.preventDefault();
+  }
+}, false);
+document.body.addEventListener("touchend", function (e) {
+  if (e.touches.length > 1){return true;}
+  else if (e.target == canvas) {
+    e.preventDefault();
+  }
+}, false);
+document.body.addEventListener("touchmove", function (e) {
+  if (e.touches.length > 1){return true;}
+  else if (e.target == canvas) {
+    e.preventDefault();
+  }
+}, false);
+
+document.body.onselectstart = function() {return false;}
+
+
+
+  canvas.onmousedown = function(e) {
+    mouse.click = true;
+    mouse.pos.x = e.pageX;
+    mouse.pos.y = e.pageY;
+  };
+  
+  canvas.onmouseup = function(e) {
+    mouse.click = false;
+    mouse.pos_prev = undefined;
+  };
+  
+  canvas.onmousemove = function(e) {
+    mouse.pos.x = e.pageX;
+    mouse.pos.y = e.pageY;
+    mouse.move = true;
+  };
+
+  socket.on("get_image", function() {
+    // get the dataURL in .png format
+    var dataURL = document.getElementById("drawboard").toDataURL();
+    socket.emit("send_image", dataURL)
+  });
+
+  socket.on("image", function(image){
+    var img=new Image();  
+    img.onload=start;
+    img.src=image;
+      function start(){
+        context.drawImage(img,0,0)
+        };
+      socket.emit("image_recieved"); 
+      });
+
+  socket.on("draw_line", function draw(data) {
+    var line = data.line;
+    if (String(line[4]) == "square" || String(line[4]) == "round" || String(line[4]) == "butt"){
+    context.beginPath();
+    context.lineCap = String(line[4]);
+    context.lineJoin = "round";
+    context.lineWidth = line[3];
+    context.strokeStyle = line[2];
+    context.moveTo(line[0].x, line[0].y);
+    context.lineTo(line[1].x, line[1].y);
+    context.stroke();
+  } else if (String(line[4]) == "spray"){
+  var line = data.line;
+  context.lineWidth = line[3];
+  var radius = context.lineWidth / 2;
+  var area = radius * radius * Math.PI;
+  var dotsPerTick = Math.ceil(area / 30);
+
+  var currentPos = line[0];
+  function spray3 () {
+    for (var i = 0; i < dotsPerTick; i++) {
+      var offset = randomPointInRadius(radius);
+      context.fillStyle = line[2]
+      context.fillRect(currentPos.x + offset.x,
+                  currentPos.y + offset.y, 1, 1);
+    }
+  }; spray3();
+};})
+
+function randomPointInRadius(radius) {
+  for (;;) {
+    var x = Math.random() * 2 - 1;
+    var y = Math.random() * 2 - 1;
+    if (x * x + y * y <= 1)
+      return {x: x * radius, y: y * radius};
+  }
+}
+
+  
+  
+  function drawLoop() {
+    if (mouse.click) {
+      socket.emit("draw_line", { line: [mouse.pos, mouse.pos_prev, cl, dwidth, style] });
+      mouse.move = false;
+    }
+    
+    if (mouse.click) {mouse.pos_prev = {x: mouse.pos.x, y: mouse.pos.y};};
+    setTimeout(drawLoop, 25);
+  }
+  
+  drawLoop();
+  context.fillStyle = 'rgb(255,255,255)';
+    context.beginPath();
+    context.fillRect(0, 0, drawboard.width, drawboard.height);;
+    context.closePath();
+    context.fill();
+});
+</script>
+<script>
+function drawOnCanvas () {
+   var rgb =[
+       $('#slider-1').slider("value"),
+       $('#slider-2').slider("value"),
+       $('#slider-3').slider("value")
+   ];
+   var c = document.getElementById("myCanvas2");
+   var ctx = c.getContext("2d");
+   var color = "rgb("+ rgb.join(',') + ")" ;
+   ctx.fillStyle = color
+   ctx.beginPath();
+   ctx.fillRect(0, 0, myCanvas2.width, myCanvas2.height);;
+   ctx.closePath();
+   ctx.fill();
+}
+function createSlider1(slider) {
+   slider.slider({
+      orientation: "vertical",
+      range: "min",
+      min: 0,
+      max: 255,
+      value: r,
+      slide: function( event, ui ) {
+        drawOnCanvas();
+        r = ui.value;
+        cl = 'rgb('+r+','+g+','+b+')';
+        pl.color = cl;
+      }
+  })
+}
+function createSlider2(slider) {
+   slider.slider({
+      orientation: "vertical",
+      range: "min",
+      min: 0,
+      max: 255,
+      value: g,
+      slide: function( event, ui ) {
+        drawOnCanvas();
+      	g = ui.value;
+      	cl = 'rgb('+r+','+g+','+b+')';
+        pl.color = cl;
+      }
+  })
+}
+function createSlider3(slider) {
+   slider.slider({
+      orientation: "vertical",
+      range: "min",
+      min: 0,
+      max: 255,
+      value: b,
+      slide: function( event, ui ) {
+        drawOnCanvas();
+        b = ui.value;
+        cl = 'rgb('+r+','+g+','+b+')';
+        pl.color = cl;
+      }
+  })
+}
+function createSlider4(slider) {
+   slider.slider({
+      orientation: "vertical",
+      range: "min",
+      min: 1,
+      max: 150,
+      value: 2,
+      slide: function( event, ui ) {
+        dwidth = ui.value;
+      }
+  })
+}
+$(function() {
+    createSlider1($( "#slider-1" ));
+    createSlider2($( "#slider-2" ));
+    createSlider3($( "#slider-3" ));
+    createSlider4($( "#slider-4" ));    
+});
+</script>
 <script> 
 document.getElementById("myCanvas2").style.backgroundColor = cl;
 </script>
