--- a/index2.html
+++ b/index2.html
@@ -321,78 +321,143 @@ else if (line[4] == "ellipse"){
   context.lineWidth = line[3];
   ellipse((line[1].x + line[0].x)/2,(line[1].y + line[0].y)/2,line[0].x - line[1].x, line[0].y - line[1].y);
 } else if (line[4] == "fill"){ 
-var rgb2 = line[2].replace(/[^\d,]/g, '').split(','); var rgba = {r:Number(rgb2[0]), g:Number(rgb2[1]), b:Number(rgb2[2]), a:255}; floodfill(line[0].x, line[0].y, rgba, context, 700, 550, 25);
+var rgb2 = line[2].replace(/[^\d,]/g, '').split(','); var rgba = [Number(rgb2[0]), Number(rgb2[1]), Number(rgb2[2]), 255]; floodFillLinear(canvas, line[0].x, line[0].y, rgba, 40);
 }
 })
-function floodfill(x,y,fillcolor,ctx,width,height,tolerance) {
-  var img = ctx.getImageData(0,0,width,height);
-  var data = img.data;
-  var length = data.length;
-  var Q = [];
-  var i = (x+y*width)*4;
-  var e = i, w = i, me, mw, w2 = width*4;
-  var targetcolor = [data[i],data[i+1],data[i+2],data[i+3]];
-  var targettotal = data[i]+data[i+1]+data[i+2]+data[i+3];
-
-  if(!pixelCompare(i,targetcolor,targettotal,fillcolor,data,length,tolerance)) { return false; }
-  Q.push(i);
-  while(Q.length) {
-    i = Q.pop();
-    if(pixelCompareAndSet(i,targetcolor,targettotal,fillcolor,data,length,tolerance)) {
-      e = i;
-      w = i;
-      mw = parseInt(i/w2)*w2; //left bound
-      me = mw+w2; //right bound     
-      while(mw<(w-=4) && pixelCompareAndSet(w,targetcolor,targettotal,fillcolor,data,length,tolerance)); //go left until edge hit
-      while(me>(e+=4) && pixelCompareAndSet(e,targetcolor,targettotal,fillcolor,data,length,tolerance)); //go right until edge hit
-      for(var j=w;j<e;j+=4) {
-        if(j-w2>=0    && pixelCompare(j-w2,targetcolor,targettotal,fillcolor,data,length,tolerance)) Q.push(j-w2); //queue y-1
-        if(j+w2<length  && pixelCompare(j+w2,targetcolor,targettotal,fillcolor,data,length,tolerance)) Q.push(j+w2); //queue y+1
-      }       
-    }
-  }
-  ctx.putImageData(img,0,0);
+function floodFillLinear(canvas, x, y, fillColor, tolerance) {
+	/**
+	 * 相关数据准备
+	 */
+	var width = canvas.width;
+	var height = canvas.height;
+	var context = canvas.getContext("2d");
+	var pixelData = context.getImageData(0, 0, canvas.width, canvas.height);
+	var pixelsChecked = new Array(width * height);
+	var startIdx = (width * y + x) * 4;
+	var startColor = [ pixelData.data[startIdx], pixelData.data[startIdx + 1],
+			pixelData.data[startIdx + 2], pixelData.data[startIdx + 3] ];
+	if (startColor[0] == 0 && startColor[1] == 0 && startColor[2] == 0
+			&& startColor[3] == 255) {
+		return;
+	}
+	var ranges = new Queue();
+	/**
+	 * 算法执行
+	 */
+	LinearFill(x, y);
+	var range;
+	while (!ranges.empty()) {
+		range = ranges.dequeue();
+		var downPxIdx = (width * (range.Y + 1)) + range.startX;
+		var upPxIdx = (width * (range.Y - 1)) + range.startX;
+		var upY = range.Y - 1;
+		var downY = range.Y + 1;
+		for (var i = range.startX; i <= range.endX; i++) {
+			if (range.Y > 0 && (!pixelsChecked[upPxIdx]) && CheckPixel(upPxIdx)) {
+				LinearFill(i, upY);
+			}
+			if (range.Y < (height - 1) && (!pixelsChecked[downPxIdx])
+					&& CheckPixel(downPxIdx)) {
+				LinearFill(i, downY);
+			}
+			downPxIdx++;
+			upPxIdx++;
+		}
+	}
+	/**
+	 * 将结果进行渲染
+	 */
+	context.putImageData(pixelData, 0, 0, 0, 0, width, height);
+	function LinearFill(x, y) {
+		var lFillLoc = x;
+		var pxIdx = width * y + x;
+		while (true) {
+			SetPixel(pxIdx, fillColor);
+			pixelsChecked[pxIdx] = true;
+			lFillLoc--;
+			pxIdx--;
+			if (lFillLoc < 0 || (pixelsChecked[pxIdx]) || !CheckPixel(pxIdx)) {
+				break;
+			}
+		}
+		lFillLoc++;
+		rFillLoc = x;
+		pxIdx = (width * y) + x;
+		while (true) {
+			SetPixel(pxIdx, fillColor);
+			pixelsChecked[pxIdx] = true;
+			rFillLoc++;
+			pxIdx++;
+			if (rFillLoc >= width || pixelsChecked[pxIdx] || !CheckPixel(pxIdx)) {
+				break;
+			}
+		}
+		rFillLoc--;
+		var r = new FloodFillRange(lFillLoc, rFillLoc, y);
+		ranges.enqueue(r);
+	}
+	function SetPixel(pxIdx, color) {
+		pixelData.data[pxIdx * 4] = color[0];
+		pixelData.data[pxIdx * 4 + 1] = color[1];
+		pixelData.data[pxIdx * 4 + 2] = color[2];
+		pixelData.data[pxIdx * 4 + 3] = color[3];
+	}
+	function FloodFillRange(startX, endX, Y) {
+		this.startX = startX;
+		this.endX = endX;
+		this.Y = Y;
+	}
+	function CheckPixel(px) {
+		var red = pixelData.data[px * 4];
+		var green = pixelData.data[px * 4 + 1];
+		var blue = pixelData.data[px * 4 + 2];
+		var alpha = pixelData.data[px * 4 + 3];
+		return (red >= (startColor[0] - tolerance)
+				&& red <= (startColor[0] + tolerance)
+				&& green >= (startColor[1] - tolerance)
+				&& green <= (startColor[1] + tolerance)
+				&& blue >= (startColor[2] - tolerance)
+				&& blue <= (startColor[2] + tolerance)
+				&& alpha >= (startColor[3] - tolerance) && alpha <= (startColor[3] + tolerance));
+	}
 }
-
-function pixelCompare(i,targetcolor,targettotal,fillcolor,data,length,tolerance) {  
-  if (i<0||i>=length) return false; //out of bounds
-  if (data[i+3]===0)  return true;  //surface is invisible
-  
-  if (
-    (targetcolor[3] === fillcolor.a) && 
-    (targetcolor[0] === fillcolor.r) && 
-    (targetcolor[1] === fillcolor.g) && 
-    (targetcolor[2] === fillcolor.b)
-  ) return false; //target is same as fill
-  
-  if (
-    (targetcolor[3] === data[i+3]) &&
-    (targetcolor[0] === data[i]  ) && 
-    (targetcolor[1] === data[i+1]) &&
-    (targetcolor[2] === data[i+2])
-  ) return true; //target matches surface 
-  
-  if (
-    Math.abs(targetcolor[3] - data[i+3])<=(255-tolerance) &&
-    Math.abs(targetcolor[0] - data[i]  )<=tolerance && 
-    Math.abs(targetcolor[1] - data[i+1])<=tolerance &&
-    Math.abs(targetcolor[2] - data[i+2])<=tolerance
-  ) return true; //target to surface within tolerance 
-  
-  return false; //no match
+function Queue() {
+	this.dataStore = [];
 }
-
-function pixelCompareAndSet(i,targetcolor,targettotal,fillcolor,data,length,tolerance) {
-  if(pixelCompare(i,targetcolor,targettotal,fillcolor,data,length,tolerance)) {
-    //fill the color
-    data[i]    = fillcolor.r;
-    data[i+1] = fillcolor.g;
-    data[i+2] = fillcolor.b;
-    data[i+3] = fillcolor.a;
-    return true;
-  }
-  return false;
-}
+Queue.prototype = {
+	// 向队尾添加一个元素
+	enqueue : function(element) {
+		this.dataStore.push(element);
+	},
+	// 删除队首的元素
+	dequeue : function() {
+		return this.dataStore.shift();
+	},
+	// 读取队首的元素
+	front : function() {
+		return this.dataStore[0];
+	},
+	// 读取队尾的元素
+	back : function() {
+		return this.dataStore[this.dataStore.length - 1];
+	},
+	// 显示队列内的所有元素
+	toString : function() {
+		var retStr = "";
+		for (var i = 0; i < this.dataStore.length; ++i) {
+			retStr += this.dataStore[i] + "\n";
+		}
+		return retStr;
+	},
+	// 判断队列是否为空
+	empty : function() {
+		if (this.dataStore.length == 0) {
+			return true;
+		} else {
+			return false;
+		}
+	}
+};
 
 function ellipse(cx, cy, w, h){      
     var ctx = canvas.getContext('2d');
